fixed portrait gif

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Lucas Regazzi</title>
-        <link rel="shortcut icon" type="image/jpg" href="./assets/hi copy.png" />
+        <link rel="shortcut icon" type="image/jpg" href="./assets/hi.png" />
         <!-- External Fonts -->
         <link href="https://fonts.googleapis.com/css2?family=Jomolhari&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Manrope&amp;display=swap" rel="stylesheet">
