--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
         <!-- External Fonts -->
         <link href="https://fonts.googleapis.com/css2?family=Jomolhari&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Manrope&amp;display=swap" rel="stylesheet">
+        <!-- Dev Icon Kit -->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.8.2/devicon.min.css">
         <!-- Internal Styles -->
         <link rel="stylesheet" href="./styles/style.css">
-        <link rel="stylesheet" href="./fontisto-master/css/fontisto/fontisto-brands.css">
+        <link rel="stylesheet" href="./fontisto-master/css/fontisto/fontisto.min.css">
 </head>
 <!--                                                                       
 #####  ######  ####    ##   ###### ###### #     #####  ###### #    # 
